--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
   <h5>Type country name in search field to find country statistics</h5>
   <input id="haku"></input><button id="search" onclick="countrySearch()">Search</button>
   <div id="country"></div>
-  <h5 id="">Current covid-19 situtation in world</h5>
+  <h5 id="cr">Current covid-19 situtation in world</h5>
   <div id="wrapper">
     <div id="eka" class="box">
     </div>
     <div id="toka" class="box">
     </div>
-    <div id="kolmas" class="box">
-      <p>Active cases</p>
+  </div>
+  <div id="wrapper2">
+    <div id="kolmas" class="box2">
+      <p>Active cases: No available</p>
     </div>
-    <div id="neljas" class="box">
+    <div id="neljas" class="box2">
     </div>
   </div>
   <h5 id="xp">Button 1 shows countries with total cases over 1 million and button 2 all countries list</h5>
